# ClosedIntelligence

./: .gitignore  LICENSE  README.md  SECURITY.md  pyproject.toml
docs/: ARCHITECTURE.md  ENTERPRISE_DAPP.md
examples/: open-field.json
src/closedintelligence/: __init__.py  cli.py  core.py  dapp.py  webapp.py
src/closedintelligence/static/: app.js  index.html  style.css
tests/: test_cli.py  test_core.py  test_dapp.py
